welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: not found: type boolean
	var EST:boolean = false;
                ^SnakeBuggle:4: error: not found: type boolean
	var OUEST:boolean = false;
                  ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
		if (EST) {
                ^